// Copyright 2020 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.


syntax = "proto3";

package migration;

option go_package = "go.chromium.org/luci/cv/api/migration;migrationpb";

// Settings is schema of service-wide commit-queue/migration-settings.cfg which
// is used only during migration. It applies to all LUCI projects and is read by
// CQDaemon and LUCI CV.
message Settings {
  message ApiHost {
    // e.g. "luci-change-verifier-dev.appspot.com".
    string host = 1;
    // If a LUCI Project matches any of regexps and none of _exclude ones,
    // CQDaemon will connect to the above Migration API host.
    repeated string project_regexp = 2;
    repeated string project_regexp_exclude = 4;

    // If true and several hosts are configured, all other hosts' responses are
    // ignored.
    bool prod = 3;
  }

  // CQDaemon doesn't really have a -dev version, therefore to test -dev of CV,
  // production CQDaemon can connect to both prod and dev migration API.
  repeated ApiHost api_hosts = 1;

  // Determines which projects should start relying on CV for computing
  // Runs to work on.
  //
  // The project is using CV Runs if and only if all 3 hold:
  //  * project matches at least one project_regexp.
  //  * project matches no project_regexp_exclude.
  //  * project matches exactly one ApiHost overall OR with prod=true.
  message UseCVRuns {
    repeated string project_regexp = 1;
    repeated string project_regexp_exclude = 2;
  }
  UseCVRuns use_cv_runs = 3;
}
